--- a/src/main/java/bd/UI/UserInterface.form
+++ b/src/main/java/bd/UI/UserInterface.form
@@ -76,6 +76,14 @@
                 </constraints>
                 <properties/>
               </component>
+              <component id="95bcc" class="javax.swing.JButton" binding="refreshButton1">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Refresh"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="10858" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -133,6 +141,14 @@
                 </constraints>
                 <properties/>
               </component>
+              <component id="80fb" class="javax.swing.JButton" binding="refreshButton2">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Refresh"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="d25b3" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -188,6 +204,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="66ebd" class="javax.swing.JButton" binding="refreshButton3">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Refresh"/>
+                </properties>
               </component>
             </children>
           </grid>
@@ -245,6 +269,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="489ce" class="javax.swing.JButton" binding="refreshButton4">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Refresh"/>
+                </properties>
               </component>
             </children>
           </grid>
